public/css/ebook.css
body {
    display: grid;
    grid-template: auto 1fr auto / minmax(15px, 4%) minmax(200px, 92%) minmax(15px, 4%);;
    padding: 0;
    margin: 0;
    overflow: hidden;
}

/*
  <div class="parent">
    <header class="pink section">Header</header>
    <div class="left-side blue section" contenteditable>Left Sidebar</div>
    <main class="section coral" contenteditable> Main Content</main>
    <div class="right-side yellow section" contenteditable>Right Sidebar</div>
    <footer class="green section">Footer</footer>
  </div> */
.header-wrapper {
    max-width: fit-content;
}
  
header {
    grid-column: 1 / 4;
}

.style-button {
    min-width: 40px;
    min-height: 40px;
    font-size: 20px;
}

#stylesModal {
    display: none;
}

.modal {
    z-index: 150;
}

#dark-button {
    font-size: 20px;
    margin: 0 0 0 1.25em;
}

#styles-button {
	top: 20px;
	right: 68px;
	position: absolute;
    min-width: 40px;
    min-height: 40px;
    font-size: 20px;
    margin: 0 1.25em 0 0;
}

.left-side {
    grid-column: 1 / 2;
}

main {
    grid-column: 2 / 3;
}

.right-side {
    grid-column: 3 / 4;
}

footer {
    margin-top:0;
    grid-column: 1 / 4;
    color: grey;
    font-size: smaller;
}

.loading-cover {
    display: grid;
    place-items: center;
}

img {
    max-width: 90%;
}

.loading-message {
    padding-top: 1em;
    margin: 0 auto;
}

.view {
    position: relative;
    left: -7px;
}

.dark > .left-side {
    background-color: rgb(70, 80, 89);

}

.dark > .right-side {
    background-color: rgb(70, 80, 89);

}

.left-side {
    background-image: url('data:image/svg+xml;utf8,<svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M20 .755l-14.374 11.245 14.374 11.219-.619.781-15.381-12 15.391-12 .609.755z"/></svg>');
    background-position: 50%;
    background-repeat: no-repeat;
    z-index: 100;
    background-color: azure;
}

.right-side {
    background-image: url('data:image/svg+xml;utf8,<svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M4 .755l14.374 11.245-14.374 11.219.619.781 15.381-12-15.391-12-.609.755z"/></svg>');
    background-position: 50%;
    background-repeat: no-repeat;
    z-index: 100;
    background-color: azure;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

.select {
    border: solid 1px;
}

.dark select {
    color: white;
    background-color: rgb(70, 80, 89);
}
.closebtn {
    font-size: 40px;
    line-height: 0;
    margin-left: 4px;
    margin-right: 12px;
    text-decoration: none;
    top: 14px;
    left: 0px;
    position: relative;
    z-index: 100;
}
.myTopBar-controls {
    margin: 0.5em 0 0;
    position: relative;
    top: -30px;
    max-width: calc(100% - 8px);
}
.myTopBar-controls {
    margin-left: 48px;
}
.myTopBar-controls > p {
    margin-bottom: 0;
}
.myTopBar-title {
    margin: 0.5em 0 1em;
}
.myTopBar-title > p {
    text-align: center;
    margin: 0;
}
.myTopBar-page {
    margin: 0.5em 0 0;
}
.myTopBar-page > p {
    text-align: center;
    margin: 0;
}

select {
    appearance: none;
    background-color: transparent;
    border: none;
    /* color: rgba(99, 99, 99, 0.406); */
    cursor: inherit;
    font-family: inherit;
    font-size: inherit;
    line-height: inherit;
    margin: 0;
    padding: 0 5%;
    width: 100%;
}

select::-ms-expand {
    display: none;
}

